--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,17 @@
 :root {
 
     --primary-color: #0fb90f;
-    --bg-color: #f5f2f2;
-    --bg-secondary-color: #dbd8d8;
-    --bg-thirty-color: #e7e4e4;
-    --text-color: #1A1A1A;
-    --text-colorRgb: "26, 26, 26";
+
     
+
+      --bg-color: #0d1117;
+  /* --bg-color: #0F0F0F; */
+  --bg-secondary-color: #161b22;
+  /* --bg-secondary-color: #1A1A1A; */
+  
+    --bg-thirty-color: #0d0d0d;
+  --text-color: #dbd1d1;
+  --text-colorRgb: "219, 209, 209";
 }
 
 * {
@@ -15,16 +20,12 @@
     color: var(--text-color);
 }
 
-.dark {
-  --bg-color: #0d1117;
-  /* --bg-color: #0F0F0F; */
-  --bg-secondary-color: #161b22;
-  /* --bg-secondary-color: #1A1A1A; */
-  
-    --bg-thirty-color: #0d0d0d;
-  --text-color: #dbd1d1;
-  --text-colorRgb: "219, 209, 209";
-
+.light {
+    --bg-color: #f5f2f2;
+    --bg-secondary-color: #dbd8d8;
+    --bg-thirty-color: #e7e4e4;
+    --text-color: #1A1A1A;
+    --text-colorRgb: "26, 26, 26";
 }
 
 html {
